force-app/main/default/objects/Operational_Indicator__c/Operational_Indicator__c.object-meta.xml
<CustomObject>
    <description>Registra os resultados operacionais periódicos de cada unidade logística, incluindo entregas, SLA, pacotes em aberto, ocorrências e outros indicadores de desempenho. Permite acompanhar a evolução da operação por unidade e por data, apoiando relatórios, dashboards e análises gerenciais.</description>
    <label>Indicador Operacional</label>
    <nameField>
        <displayFormat>IND-{00000}</displayFormat>
        <label>Código do Indicador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicadores Operacionais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>