force-app/main/default/objects/Operational_Indicator__c/fields/Delivered_Orders__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pedidos entregues pela unidade logística na data de referência.</description>
    <inlineHelpText>Informe o total de pedidos concluídos como entregues para esta unidade e data de referência.</inlineHelpText>
    <label>Pedidos Entregues</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>