force-app/main/default/objects/Operational_Indicator__c/fields/Delivery_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Percentage__c</fullName>
    <description>Calcula automaticamente o percentual de pedidos entregues em relação ao total de pedidos da unidade na data de referência.</description>
    <formula>IF(
    Total_Orders__c = 0,
    0,
    Delivered_Orders__c / Total_Orders__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual calculado automaticamente com base nos campos Total de Pedidos e Pedidos Entregues.</inlineHelpText>
    <label>Percentual de Entregas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>