force-app/main/default/objects/Operational_Indicator__c/fields/Late_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Late_Deliveries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pedidos entregues após o prazo previsto pela unidade logística na data de referência.</description>
    <inlineHelpText>Informe quantos dos pedidos entregues foram concluídos fora do prazo previsto.</inlineHelpText>
    <label>Entregues Fora do Prazo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>