force-app/main/default/objects/Operational_Indicator__c/fields/Logistics_Unit__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Unit__c</fullName>
    <description>Unidade logística à qual os resultados deste indicador operacional pertencem.</description>
    <inlineHelpText>Selecione a unidade logística responsável pelos resultados operacionais registrados.</inlineHelpText>
    <label>Unidade Logística</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Indicadores Operacionais</relationshipLabel>
    <relationshipName>Operational_Indicators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>