force-app/main/default/objects/Operational_Indicator__c/fields/On_Time_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Deliveries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pedidos entregues dentro do prazo previsto pela unidade logística na data de referência.</description>
    <inlineHelpText>Informe quantos dos pedidos entregues foram concluídos dentro do prazo previsto.</inlineHelpText>
    <label>Entregues no Prazo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>