force-app/main/default/objects/Operational_Indicator__c/fields/Open_Packages__c.field-meta.xml
<CustomField>
    <fullName>Open_Packages__c</fullName>
    <description>Quantidade de pacotes que permanecem em aberto na operação da unidade logística na data de referência.</description>
    <inlineHelpText>Informe quantos pacotes ainda estão pendentes de conclusão operacional nesta unidade e data.</inlineHelpText>
    <label>Pacotes em Aberto</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>