force-app/main/default/objects/Operational_Indicator__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <description>Classificação automática do desempenho da unidade conforme o SLA.</description>
    <inlineHelpText>Preenchido automaticamente pelo fluxo de classificação operacional.</inlineHelpText>
    <label>Status Operacional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentro da Meta</fullName>
            </value>
            <value>
                <fullName>Atenção</fullName>
            </value>
            <value>
                <fullName>Crítico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>