force-app/main/default/objects/Operational_Indicator__c/fields/Packages_Over_3_Days_No_Movement__c.field-meta.xml
<CustomField>
    <fullName>Packages_Over_3_Days_No_Movement__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pacotes que estão há mais de três dias sem registrar movimentação operacional na unidade logística.</description>
    <inlineHelpText>Informe quantos pacotes permanecem há mais de três dias sem movimentação nesta unidade e data de referência.</inlineHelpText>
    <label>Pacotes +3 Dias sem Movimentação</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>