force-app/main/default/objects/Operational_Indicator__c/fields/Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Date__c</fullName>
    <description>Data à qual os resultados registrados neste indicador operacional se referem.</description>
    <inlineHelpText>Informe a data operacional correspondente aos resultados deste registro.</inlineHelpText>
    <label>Data de Referência</label>
    <type>Date</type>
</CustomField>