force-app/main/default/objects/Operational_Indicator__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Calcula automaticamente o percentual de pedidos entregues dentro do prazo em relação ao total de pedidos entregues pela unidade na data de referência.</description>
    <formula>IF(
    Delivered_Orders__c = 0,
    0,
    On_Time_Deliveries__c / Delivered_Orders__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual calculado automaticamente com base nos campos Pedidos Entregues e Entregues no Prazo.</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>