force-app/main/default/objects/Operational_Indicator__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <description>Quantidade total de pedidos considerados na operação da unidade na data de referência.</description>
    <inlineHelpText>Informe o total de pedidos correspondente à unidade e à data de referência deste indicador.</inlineHelpText>
    <label>Total de Pedidos</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>