force-app/main/default/objects/Operational_Indicator__c/fields/Undelivered_Orders__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pedidos que não foram entregues pela unidade logística na data de referência.</description>
    <inlineHelpText>Informe quantos pedidos do volume total permaneceram sem entrega na data de referência.</inlineHelpText>
    <label>Pedidos Não Entregues</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>