force-app/main/default/objects/Operational_Indicator__c/fields/Unit_Date_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unit_Date_Unique_Key__c</fullName>
    <description>Identificador único formado pela Unidade Logística e pela Data de Referência.</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo técnico utilizado para impedir mais de um indicador da mesma unidade na mesma data.</inlineHelpText>
    <label>Chave Única Unidade-Data</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>