force-app/main/default/objects/Operational_Indicator__c/fields/Warehouse_Entry_Not_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Entry_Not_Dispatched__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de pacotes que deram entrada no galpão da unidade logística, mas ainda não tiveram a expedição registrada na data de referência.</description>
    <inlineHelpText>Informe quantos pacotes entraram no galpão e permanecem sem registro de expedição nesta unidade e data.</inlineHelpText>
    <label>Entrada no Galpão de Pacote Não Expedido</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>