force-app/main/default/objects/Operational_Indicator__c/validationRules/OI_Block_Negative_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>OI_Block_Negative_Values</fullName>
    <active>true</active>
    <description>Impede o salvamento de indicadores operacionais com quantidades negativas.</description>
    <errorConditionFormula>OR(
    Total_Orders__c &lt; 0,
    Delivered_Orders__c &lt; 0,
    On_Time_Deliveries__c &lt; 0,
    Late_Deliveries__c &lt; 0,
    Undelivered_Orders__c &lt; 0,
    Open_Packages__c &lt; 0,
    Packages_Over_3_Days_No_Movement__c &lt; 0,
    Warehouse_Entry_Not_Dispatched__c &lt; 0
)</errorConditionFormula>
    <errorMessage>As quantidades dos indicadores operacionais não podem ser negativas. Informe valores iguais ou maiores que zero.</errorMessage>
</ValidationRule>