force-app/main/default/objects/Operational_Indicator__c/validationRules/OI_Order_Status_Not_Above_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>OI_Order_Status_Not_Above_Total</fullName>
    <active>true</active>
    <description>Impede que a soma de pedidos entregues e não entregues seja maior que o total de pedidos.</description>
    <errorConditionFormula>Delivered_Orders__c + Undelivered_Orders__c &gt; Total_Orders__c</errorConditionFormula>
    <errorMessage>A soma de Pedidos Entregues e Pedidos Não Entregues não pode ser maior que Total de Pedidos.</errorMessage>
</ValidationRule>